<resources>
    <string name="app_name">Mobilz Lab</string>
    <string name="slogan">Quick and Affordable Smart Phone Repair</string>
    <string name="APP_NAME">Mobilz Lab</string>
    <string name="APP_NAME_ADMIN">Mobilz Lab Admin</string>

    <string name="slider_1">Welcome to Mobilzlab quick repair</string>
    <string name="slider_2">We will replace quality accessories</string>
    <string name="slider_3">We can fix it broken mobile glasses</string>


    <string name="API_KEY">AIzaSyAI3KUcC8bkDv15VztVwnO1GJxLNPW5mpY</string>

    <string name="slider_sub">Using original manufactured parts and components, we are able to restore your cell phones or iDevice to like-new condition.</string>


    <string name="benefit_1">Free and Fast Return</string>
    <string name="benefit_sub_1">We delivered safely your repaired device with in 48-72 hours on your location</string>

    <string name="benefit_2">Free Pic and Drop</string>
    <string name="benefit_sub_2">We offer free pickup and drop anywhere in islamabad</string>
    <string name="benefit_3">Professional Staff</string>
    <string name="benefit_sub_3">Our technicians are certified and carry years of smart phone repair experience.</string>
    <string name="about_us"><![CDATA[\t\t\tMobilzlab is one of the fastest growing Cell Phone Repair & Unlocking Centers in the Islamabad blue Area. We know just how important your mobile device is to your business and personal life.]]></string>
    <string name="delete">delete</string>
    <string name="status_sent">Your repair has been sent. MobilzLab will contact you soon</string>
    <string name="enter">Enter</string>
    <string name="update">Update</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="empty">Empty</string>
    <string name="all_chats">All Chats</string>
    <string name="back_button">This is the image view for back button</string>
     <string name="number">Number</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="problem_details">Problem Details</string>
    <string name="mobile">Mobile</string>
    <string name="all_repairs_request">All Repairs Request</string>
    <string name="see_chats">See Chats</string>
    <string name="repair_request">Repair Request</string>
    <string name="change_password">Change Password</string>
    <string name="request_a_repair">Request a Repair</string>
    <string name="your_name_here">Your Name Here</string>
     <string name="format">format: 03451122123</string>
     <string name="eg_address">E.g. F-10, Islamabad</string>
     <string name="select_phone">Select Phone</string>
    <string name="description_of_the_complete_problem_you_are_facing_with_your_phone">Description of the complete problem you are facing with your phone.</string>
     <string name="schedule_repair">Schedule Repair</string>
    <string name="query">enter your query here</string>
    <string name="shop_address">BLACK HORSE PLAZA, FM99SHOP blue area Islamabad</string>
    <string name="hepling_icon">hepling icon</string>
    <string name="timming">OPENING TIME Mon - Sun: 09.00am to 19.00pm</string>
    <string name="about_shop">About Shop</string>
    <string name="call_is">CALL US  +9200-5338880</string>
    <string name="email">Support@mobilzlab.com</string>
    <string name="contact_us">Contact Us</string>
    <string name="home">Home</string>
    <string name="services">Services</string>
    <string name="about_us_home">About Us</string>
    <string name="contact_us_home">Contact Us</string>
    <string name="live_chat">Live Chat</string>
    <string name="request_repair">Request Repair</string>
    <string name="click_to_call">Click to call</string>
    <string name="youtube">Youtube</string>
    <string name="gallery">Gallery</string>
    <string name="feedback">Feedback</string>
    <string name="send">Send</string>
    <string name="your_worthy_feedback">Your Worthy Feedback</string>
    <string name="your_name">Your Name</string>
    <string name="please_enter_how_mobilzlab_was_helpful">Please enter how MobilzLab was helpful</string>
    <string name="free_diagnostics">Free Diagnostics</string>
    <string name="desc">Mobilzlab is a quick and easy way of checking the set up on your Mobile Phones, Desktop and Laptop, Acessories and ect... We done its free of cost.</string>
    <string name="quick_repair_process">Quick Repair Process</string>
    <string name="the_repair_process_is_fast_and_convenient_and_our_expert_teams_of_mobilzlab_if_you_see_a_phone_symbol_in_the_top_left_corner_of_the_screen">The repair process is fast and convenient and our expert teams of mobilzlab, If you see a phone symbol in the top left corner of the screen.</string>
    <string name="_24_7_customer_support">24/7 Customer Support</string>
    <string name="_24x7_techsupport_is_one_of_the_best_services_in_the_mobilzlab_24x7_tech_support_providing_quality_services_at_anytime_anywhere_in_the_pakistan">24x7 techsupport is one of the best services in the mobilzlab. 24x7 tech support providing quality services at anytime, anywhere in the Pakistan.</string>
    <string name="all_services">All Services</string>
    <string name="the_first_iphone_was_released_on_june_29_2007_and_in_the_short_space_of_10_years_this_pocket_sized_device_has_completely_changed_the_world_in_a_number_of_ways_first_the_iphone_set_the_standard_for_smartphone_technology_with_its_smooth_feel_and_its_minimalist_design_every_smartphone_that_has_come_since_then_has_shared_this_same_general_aesthetic">The first iPhone was released on June 29, 2007, and in the short space of 10 years, this pocket-sized device has completely changed the world in a number of ways. First, the iPhone set the standard for smartphone technology with its smooth feel and its minimalist design. Every smartphone that has come since then has shared this same general aesthetic.</string>
    <string name="iphone">iPhone</string>
    <string name="do_you_need_trusted_android_repair_in_islamabad_if_so_stop_by_mobilzlab_shop_today_our_top_rated_technicians_are_available_today_to_help_you_fix_any_problem_quickly_and_correctly_did_your_phone_stop_working_with_no_explanation_we_can_help_maybe_your_toddler_tossed_your_phone_across_the_parking_lot_accidentally_of_course_no_worries_we_fix_cracked_screens_all_day_every_day">Do you need trusted Android repair in Islamabad? If so, stop by mobilzlab shop today. Our top-rated technicians are available today to help you fix any problem quickly and correctly. Did your phone stop working with no explanation? We can help. Maybe your toddler tossed your phone across the parking lot, accidentally, of course. No worries. We fix cracked screens all day, every day.</string>
    <string name="android">Android</string>
    <string name="icloud">ICloud</string>
    <string name="provide_feedback">Provide Feedback</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="complete_mobile_repair_studio">COMPLETE MOBILE REPAIR STUDIO</string>
    <string name="steric">*</string>
    <string name="overcharging_of_phone">Overcharging of Phone</string>
    <string name="continuous_gaming">Continuous Gaming</string>
    <string name="mobile_overheating">MOBILE OVERHEATING</string>
    <string name="glass_damage">Glass Damage</string>
    <string name="screen_damage">Screen Damage</string>
    <string name="scratches">Scratches</string>
    <string name="cracked_screen">CRACKED SCREEN</string>
    <string name="water_damaged">Water damaged</string>
    <string name="motherboard_inadequate_power">Motherboard Inadequate Power</string>
    <string name="short_circuit">Short Circuit...</string>
    <string name="motherboard_problem">MOTHERBOARD PROBLEM</string>
    <string name="damaged_signal_receivers">Damaged Signal Receivers</string>
    <string name="any_hardware_fault">Any Hardware Fault</string>
    <string name="any_software_fault">Any Software Fault</string>
    <string name="signal_issues">SIGNAL ISSUES</string>
    <string name="complete_immersion_in_water">Complete Immersion in water</string>
    <string name="moisture_penetration">Moisture Penetration</string>
    <string name="continuous_multi_tasking">Continuous Multi-Tasking...</string>
    <string name="water_damage">WATER DAMAGE</string>
    <string name="old_battery">Old Battery</string>
    <string name="no_charging">No Charging</string>
    <string name="slow_charging">Slow Charging</string>
    <string name="battery_issues">BATTERY ISSUES</string>
    <string name="rain_damage">Rain Damage...</string>
    <string name="developer">Jalees Mukarram</string>
     <string name="failed_to_send">Failed to send..</string>
    <string name="_11m">11m</string>
    <string name="unread_messages">unread messages*</string>
    <string name="_37_messages_received">37 messages received</string>

</resources>