<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/menu_bg">

    <RelativeLayout
        android:id="@+id/RLFeedbackDialogueTopContainer"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/feedback"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RLFeedbackDialogueTopContainer"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:theme="@style/SignUp">

        <Button
            android:id="@+id/BTNFeedbackDialogueSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ETFeedbackDialogueFeedbackAsking"
            android:layout_centerHorizontal="true"
            android:background="@drawable/round_primary"
            android:elevation="12dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/ETFeedbackDialogueFeedbackAsking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ETFeedbackDialogueNameAsking"
            android:layout_margin="20dp"
            android:hint="@string/your_worthy_feedback"
            android:inputType="textMultiLine|textNoSuggestions"

            />


        <EditText
            android:id="@+id/ETFeedbackDialogueNameAsking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TVFeedbackDialogueInsertPasswordShowing"
            android:layout_margin="20dp"
            android:hint="@string/your_name"
            android:inputType="textPersonName"

            />


        <TextView
            android:id="@+id/TVFeedbackDialogueInsertPasswordShowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/please_enter_how_mobilzlab_was_helpful"
            android:textColor="@color/colorSecondPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />


    </RelativeLayout>

</RelativeLayout>