<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBlueDark">

    <!--    AddressAndTime-->

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:paddingTop="20dp">


        <LinearLayout
            android:id="@+id/LLFragmentAddressAndTimeHomeContainer"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/TVFragmentAddressAndTimeAboutShopShowing"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hepling_icon"
                android:src="@drawable/ic_home_selected" />

            <TextView
                android:id="@+id/TVFragmentAddressAndTimeAddressShowing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/shop_address"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/LLFragmentAddressAndTimeHomeContainer"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hepling_icon"
                android:src="@drawable/ic_timer_24" />

            <TextView
                android:id="@+id/TVFragmentAddressAndTimeTimmingShowing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/timming"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/TVFragmentAddressAndTimeAboutShopShowing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/about_shop"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:paddingTop="20dp">


        <LinearLayout
            android:id="@+id/LLFragmentAddressAndTimeCallUsContainer"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/TVFragmentAddressAndTimeAboutContactUsShowing"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hepling_icon"
                android:src="@drawable/ic_contact_us_selected" />

            <TextView
                android:id="@+id/TVFragmentAddressAndTimeCallUsShowing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/call_is"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/LLFragmentAddressAndTimeCallUsContainer"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hepling_icon"
                android:src="@drawable/ic_mail_24" />

            <TextView
                android:id="@+id/TVFragmentAddressAndTimeMailShowing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/email"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/TVFragmentAddressAndTimeAboutContactUsShowing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/contact_us"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />


    </RelativeLayout>

</RelativeLayout>