<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_bg"
    tools:context=".Activities.AdminView">

    <RelativeLayout
        android:id="@+id/RLAdminViewTopContainer"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/APP_NAME_ADMIN"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/RLAdminViewTopContainer"
        android:layout_margin="20dp"
        android:padding="20dp"
        app:cardCornerRadius="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/BTNAdminViewSeeChats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/BTNAdminViewSeeScheduleBookings"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:background="@drawable/round_primary"
                android:elevation="12dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/see_chats"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <Button
                android:id="@+id/BTNAdminViewSeeScheduleBookings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:background="@drawable/round_primary"
                android:elevation="12dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/repair_request"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <Button
                android:id="@+id/BTNAdminViewPasswordChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/BTNAdminViewSeeScheduleBookings"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:background="@drawable/round_primary"
                android:elevation="12dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/change_password"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>